<resources>
    <string name="app_name">Comms</string>
    <string name="login">LOGIN</string>
    <string name="rember_me">Remember me</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="forgotHeader">FORGOT PASSWORD</string>
    <string name="forgotpassword_text">Please Check your email \n
        for your new password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="start">START</string>
    <string name="new_version_avalible">A New Update is Available</string>
    <string name="update">Update</string>
    <string name="select_phato_choose">Select Action</string>
    <string name="select_from_gallery">Select photo from gallery</string>
    <string name="capture_from_camera">Capture photo from camera</string>
    <string name="select_image_mode">Choose Image from </string>
    <string name="from_gallery">Select photo from gallery</string>
    <string name="from_camera">Capture photo from camera</string>
    <string name="Entercredit">Enter your credit card details</string>
    <string name="Cardnumber">Card number</string>
    <string name="name">Name</string>
    <string name="Expirydate">Expiry date</string>
    <string name="CVV">CVV</string>
    <string name="stripe"> stripe</string>
    <string name="PAY">PAY</string>
    <string name="DASHBOARD">DASHBOARD</string>
    <string name="Poweredby">Powered by </string>
    <string name="Note">Note : </string>
    <string name="Forsupport">For support, Write us at </string>
    <string name="support">support@commsapp.i0</string>
</resources>