<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_45sdp"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <RelativeLayout
                android:layout_width="@dimen/_135sdp"
                android:layout_height="@dimen/_130sdp"
                android:layout_centerHorizontal="true">
                <ImageView
                    android:id="@+id/imageiconid"
                    android:layout_width="@dimen/_135sdp"
                    android:layout_height="@dimen/_130sdp"
                    android:background="@drawable/round_tick">
                </ImageView>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/capsuleshape"
                android:layout_marginTop="@dimen/_50sdp"
                android:paddingBottom="@dimen/_30sdp"
                android:paddingTop="@dimen/_85sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:layout_marginLeft="@dimen/_25sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_thakyou"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Thank You"
                        android:textColor="@color/text_color_dark_blue"
                        android:textSize="@dimen/_30sdp"

                        android:gravity="center"
                        android:paddingTop="@dimen/_10sdp">

                    </TextView>

                    <TextView
                        android:id="@+id/tv_subcription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="for subscribing with"
                        android:textColor="@color/text_color_dark_blue"
                        android:textSize="@dimen/_25sdp"
                        android:gravity="center">

                    </TextView>
                    <ImageView
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:background="@drawable/rounded_logo"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp">

                    </ImageView>






                </LinearLayout>



            </RelativeLayout>




        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="@dimen/_30sdp"
            android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color_dark_blue"
                    android:text="@string/Note"
                    android:textSize="@dimen/_12sdp"
                    />


            <TextView
                android:id="@+id/tv_forsupport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Forsupport"
                android:textColor="@color/text_color_light_blak"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"

                android:textSize="@dimen/_12sdp"
                >

            </TextView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal">
                <TextView
                    android:id="@+id/login_underline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color_dark_blue"
                    android:text="@string/support"

                    android:textSize="@dimen/_12sdp"
                    />

            </LinearLayout>

        </LinearLayout>




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center|bottom"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/_20sdp">


        <LinearLayout
            android:id="@+id/ll_dashboard"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/blue_bg"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
               android:background="@drawable/dash_icon"
               android:layout_marginLeft="@dimen/_15sdp"
                android:layout_gravity="center"
                >

            </ImageView>
            <TextView
                android:id="@+id/tv_logout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/DASHBOARD"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"

              android:layout_gravity="center"
                android:gravity="center"

                >

            </TextView>



        </LinearLayout>



    </LinearLayout>

</LinearLayout>